deps/v8/test/message/fail/modules-undefined-export1.out
*%(basename)s:7: SyntaxError: Export 'x' is not defined in module
export {x};
        ^
SyntaxError: Export 'x' is not defined in module

